--- a/ITR.html
+++ b/ITR.html
@@ -70,3 +70,76 @@
 
 </body>
 </html>
+
+<!-- HTML content from earlier -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>GST Registration - Basic Tax Solutions</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #2c3e50, #3498db);
+      color: white;
+      padding: 50px;
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 40px;
+    }
+
+    form {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 400px;
+      margin: auto;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: #00c896;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 6px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #00a37c;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>GST Registration Form</h1>
+  <form onsubmit="return goToThankYouPage()">
+    <input type="text" placeholder="Full Name" required>
+    <input type="tel" placeholder="Mobile Number" required>
+    <input type="email" placeholder="Email ID" required>
+    <button type="submit">Done</button>
+  </form>
+
+  <script>
+    function goToThankYouPage() {
+      window.location.href = "thankyou.html";
+      return false; // prevent actual form submission
+    }
+  </script>
+
+</body>
+</html>
