--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background: (to right, #2c5364, #203a43, #0f2027);
+      background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
       z-index: -1;
     }
 
