--- a/index.html
+++ b/index.html
@@ -12,43 +12,40 @@
       font-family: Arial, sans-serif;
       height: 100%;
       overflow: hidden;
-      background: #000;
     }
 
-    #vanta-bg {
+    #particles-js {
       position: absolute;
       width: 100%;
       height: 100%;
+      background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
       z-index: -1;
     }
 
     .content {
       position: relative;
-      z-index: 1;
+      z-index: 2;
       text-align: center;
       padding-top: 50px;
-      color: white;
     }
 
     h1 {
+      color: #fff;
       margin-bottom: 40px;
-      font-size: 2em;
     }
 
     .cards {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 30px;
       justify-content: center;
-      padding: 20px;
     }
 
     .card {
-      width: 180px;
-      height: 180px;
+      width: 200px;
+      height: 200px;
       perspective: 1000px;
       cursor: pointer;
-      outline: none;
     }
 
     .card-inner {
@@ -72,11 +69,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 16px;
+      font-size: 18px;
       color: white;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-      padding: 10px;
-      text-align: center;
     }
 
     .card-front {
@@ -87,51 +82,35 @@
       background: #00cc88;
       transform: rotateY(180deg);
     }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.5em;
-        padding: 0 10px;
-      }
-
-      .card {
-        width: 80%;
-        height: 180px;
-      }
-
-      .cards {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <div id="vanta-bg"></div>
+  <!-- Background Animation -->
+  <div id="particles-js"></div>
 
   <div class="content">
     <h1>Welcome to Basic Tax Solutions</h1>
     <div class="cards">
-      <div class="card" tabindex="0" data-url="itr.html">
+      <div class="card" data-url="itr.html">
         <div class="card-inner">
           <div class="card-front">ITR Filing</div>
           <div class="card-back">Redirecting...</div>
         </div>
       </div>
-      <div class="card" tabindex="0" data-url="gst.html">
+      <div class="card" data-url="gst.html">
         <div class="card-inner">
           <div class="card-front">GST Registration</div>
           <div class="card-back">Redirecting...</div>
         </div>
       </div>
-      <div class="card" tabindex="0" data-url="msme.html">
+      <div class="card" data-url="msme.html">
         <div class="card-inner">
           <div class="card-front">MSME Registration</div>
           <div class="card-back">Redirecting...</div>
         </div>
       </div>
-      <div class="card" tabindex="0" data-url="fssai.html">
+      <div class="card" data-url="fssai.html">
         <div class="card-inner">
           <div class="card-front">FSSAI Registration</div>
           <div class="card-back">Redirecting...</div>
@@ -140,44 +119,64 @@
     </div>
   </div>
 
-  <!-- Load Three.js and Vanta.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+  <!-- Particle Animation JS -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
-    VANTA.BIRDS({
-      el: "#vanta-bg",
-      mouseControls: true,
-      touchControls: true,
-      gyroControls: false,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      scale: 1.00,
-      scaleMobile: 1.00,
-      backgroundColor: 0x0f2027,
-      color1: 0xffffff,
-      color2: 0x00ccff
+    particlesJS("particles-js", {
+      particles: {
+        number: { value: 80, density: { enable: true, value_area: 800 } },
+        color: { value: "#ffffff" },
+        shape: {
+          type: "circle",
+          stroke: { width: 0, color: "#000000" },
+          polygon: { nb_sides: 5 }
+        },
+        opacity: { value: 0.5, anim: { enable: false } },
+        size: { value: 3, random: true, anim: { enable: false } },
+        line_linked: {
+          enable: true,
+          distance: 150,
+          color: "#ffffff",
+          opacity: 0.4,
+          width: 1
+        },
+        move: {
+          enable: true,
+          speed: 3,
+          direction: "none",
+          random: false,
+          straight: false,
+          out_mode: "out",
+          bounce: false
+        }
+      },
+      interactivity: {
+        detect_on: "canvas",
+        events: {
+          onhover: { enable: true, mode: "repulse" },
+          onclick: { enable: true, mode: "push" },
+          resize: true
+        },
+        modes: {
+          repulse: { distance: 100, duration: 0.4 },
+          push: { particles_nb: 4 }
+        }
+      },
+      retina_detect: true
     });
   </script>
 
-  <!-- Flip Animation -->
+  <!-- Flip Animation JS -->
   <script>
     document.querySelectorAll(".card").forEach(card => {
-      const url = card.getAttribute("data-url");
-
-      const handleNavigation = () => {
+      card.addEventListener("click", () => {
         card.classList.add("flip");
-        setTimeout(() => window.location.href = url, 1000);
-      };
-
-      card.addEventListener("click", handleNavigation);
-      card.addEventListener("keydown", e => {
-        if (e.key === "Enter" || e.key === " ") {
-          e.preventDefault();
-          handleNavigation();
-        }
+        const url = card.getAttribute("data-url");
+        setTimeout(() => {
+          window.location.href = url;
+        }, 1000);
       });
     });
   </script>
-
 </body>
 </html>
