--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
       overflow: hidden;
     }
 
-    #particles-js {
+    #vanta-bg {
       position: absolute;
       width: 100%;
       height: 100%;
-      background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
       z-index: -1;
     }
 
@@ -86,8 +85,8 @@
 </head>
 <body>
 
-  <!-- Background Animation -->
-  <div id="particles-js"></div>
+  <!-- Vanta Background -->
+  <div id="vanta-bg"></div>
 
   <div class="content">
     <h1>Welcome to Basic Tax Solutions</h1>
@@ -119,54 +118,33 @@
     </div>
   </div>
 
-  <!-- Particle Animation JS -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <!-- Required Scripts for Vanta.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
   <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 80, density: { enable: true, value_area: 800 } },
-        color: { value: "#ffffff" },
-        shape: {
-          type: "circle",
-          stroke: { width: 0, color: "#000000" },
-          polygon: { nb_sides: 5 }
-        },
-        opacity: { value: 0.5, anim: { enable: false } },
-        size: { value: 3, random: true, anim: { enable: false } },
-        line_linked: {
-          enable: true,
-          distance: 150,
-          color: "#ffffff",
-          opacity: 0.4,
-          width: 1
-        },
-        move: {
-          enable: true,
-          speed: 3,
-          direction: "none",
-          random: false,
-          straight: false,
-          out_mode: "out",
-          bounce: false
-        }
-      },
-      interactivity: {
-        detect_on: "canvas",
-        events: {
-          onhover: { enable: true, mode: "repulse" },
-          onclick: { enable: true, mode: "push" },
-          resize: true
-        },
-        modes: {
-          repulse: { distance: 100, duration: 0.4 },
-          push: { particles_nb: 4 }
-        }
-      },
-      retina_detect: true
+    VANTA.BIRDS({
+      el: "#vanta-bg",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      backgroundColor: 0x07192f,
+      color1: 0xff0000,
+      color2: 0x00d1ff,
+      birdSize: 1.00,
+      wingSpan: 30.00,
+      speedLimit: 5.00,
+      separation: 20.00,
+      alignment: 20.00,
+      cohesion: 20.00,
+      quantity: 5.00
     });
   </script>
 
-  <!-- Flip Animation JS -->
+  <!-- Flip Animation -->
   <script>
     document.querySelectorAll(".card").forEach(card => {
       card.addEventListener("click", () => {
